--- a/app/index.html
+++ b/app/index.html
@@ -35,8 +35,8 @@
 
 
 	<!--highcharts-->
-	<script src="./highcharts/highcharts.js"></script>
-	<script src="./highcharts/modules/exporting.js"></script>
+	<!-- <script src="./highcharts/highcharts.js"></script>
+	<script src="./highcharts/modules/exporting.js"></script> -->
 <!--	<script type="text/javascript" src="./js/charts.js"></script>	-->
 
 </head>
@@ -57,6 +57,11 @@
 
 					<!--<button ng-click="ajaxData.doClick(item, $event)">Send AJAX Request</button>-->
 					<!--CPU: {{ajaxData.cpuModel}}-->
+					CPU INFO:</br>
+					model: {{ajaxData.cpu_model}}</br>
+					cores: {{ajaxData.cpu_cores}}</br>
+
+
 					CPU USAGE:</br>
 					percentage: {{ajaxData.cpu}}</br>
 					usage: {{ajaxData.total}}</br>
